# ewe

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-linux.yaml  build-macos.yaml  build-windows.yaml  ci.yaml
design/: editor.html
ewe_cli/: Cargo.toml  README.md
ewe_cli/src/: indicatif_progress.rs  main.rs
ewe_dioxus/: Cargo.toml  Dioxus.toml  README.md  downloads.toml.example  english-wordnet-settings.toml  openapi.yaml  settings.toml
ewe_dioxus/assets/: tailwind.css
ewe_dioxus/assets/styling/: display_options.css  download_links.css  home.css  main.css  navbar.css  senses.css  synset.css
ewe_dioxus/src/: db.rs  downloads_config.rs  load.rs  main.rs  settings.rs
ewe_dioxus/src/backend/: api.rs  downloads.rs  edit.rs  mod.rs  openapi.rs  rdf.rs  senses.rs  static_files.rs  wordnet.rs  xml.rs
ewe_dioxus/src/components/: add_synset_modal.rs  branding.rs  delete_synset_modal.rs  display_options.rs  download_links.rs  edit_progress_bar.rs  edit_toggle.rs  editable_definition.rs  editable_examples.rs  editable_ili.rs  editable_lemmas.rs  editable_relations.rs  editable_wikidata.rs  mod.rs  relation.rs  relation_types.rs  subcat.rs  synset.rs  synset_picker.rs  unsaved_changes.rs  validate_button.rs  wordnet.rs
ewe_dioxus/src/views/: by_lemma.rs  by_senses.rs  by_synset.rs  downloads.rs  history.rs  home.rs  mod.rs  wn_layout.rs
ewe_lib/: Cargo.toml
ewe_lib/src/: automaton-test.yaml  change_manager.rs  lib.rs  progress.rs
ewe_lib/src/wordnet/: lexicon.rs  pronunciation.rs  redb_lexicon.rs  synset_members.rs  util.rs
oewn_lib/: Cargo.toml
oewn_lib/src/: automaton.rs  progress.rs  rels.rs  sense_keys.rs  validate.rs
oewn_lib/src/wordnet/: deprecation.rs  entry.rs  example.rs  hashmap.rs  lexicon.rs  mod.rs  pos.rs  pronunciation.rs  redb_lexicon.rs  sense.rs  synset.rs  synset_members.rs  transaction_manager.rs
src/: automaton-test.yaml  automaton.rs  change_manager.rs  main.rs  rels.rs  sense_keys.rs  validate.rs  wordnet.rs  wordnet_yaml.rs
src/wordnet/: deprecation.rs  entry.rs  example.rs  hashmap.rs  lexicon.rs  mod.rs  pos.rs  pronunciation.rs  redb_lexicon.rs  sense.rs  synset.rs  synset_members.rs  util.rs
