[package]
name = "ewe"
version = "0.1.0"
authors = ["John P. McCrae <john@mccr.ae>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"
lazy_static = "*"
xml-rs = "*"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
void = "1"
indicatif = "0.16.2"
csv = "*"
sha2 = "*"
redb = { version = "3.1.0", optional = true }

[features]
default = []
redb = ["dep:redb"]
