[package]
name = "ewe-cli"
version = "0.1.0"
authors = ["John P. McCrae <john@mccr.ae>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.18.4"
oewn_lib = { workspace = true }
lazy_static = "*"
regex = "*"
serde_yaml = "*"
