[package]
name = "ewe-dioxus"
version = "0.1.0"
authors = ["John P. McCrae <john@mccr.ae>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
phf = { version = "0.13.1", features = ["macros"] }
oewn_lib = { workspace = true , features = ["redb"] }
toml = "1.0.4"
serde = "1.0.228"
thiserror = "2.0.18"
oxrdf = { version = "0.3.3", optional = true }
oxrdfio = { version = "0.2.4", optional = true }
quick-xml = { version = "0.37.5", optional = true }
percent-encoding = "2.3.2"
teanga = { git = "https://github.com/TeangaNLP/teanga.rs", branch = "main", features = ["redb"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server", "dep:oxrdf", "dep:oxrdfio", "dep:quick-xml"]
oxrdf = ["dep:oxrdf"]
oxrdfio = ["dep:oxrdfio"]
quick-xml = ["dep:quick-xml"]
