[package]
name = "oewn_lib"
version = "0.1.0"
authors = ["John P. McCrae <john@mccr.ae>"]
edition = "2021"

[dependencies]
thiserror = "1.0.26"
lazy_static = "*"
xml-rs = "*"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
void = "1"
csv = "*"
sha2 = "*"
redb = { version = "3.1.0", optional = true }
ouroboros = "0.18.5"
speedy = { version = "0.8.7", optional = true }
rand = "0.9"
# rand pulls in getrandom transitively; on wasm32-unknown-unknown (the `web`
# build of ewe_dioxus, which links oewn_lib even though it never actually
# calls anything randomness-dependent client-side) getrandom needs an
# explicit backend telling it how to source entropy in a browser.
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []
redb = ["dep:redb", "dep:speedy"]
